--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,32 +1,46 @@
-@import 'config';
+@import "config";
 
 // General Styles
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Dosis', sans-serif;
-    line-height: 1.6;
-    background: #fff;
+  font-family: "Dosis", sans-serif;
+  line-height: 1.6;
+  background: #fff;
 }
 
 a {
-    text-decoration: none;
-    color: $dark-color;
+  text-decoration: none;
+  color: $dark-color;
 }
 
 ul {
-    list-style: none;
-
+  list-style: none;
 }
 
-h2, h3, h4 {
-    text-transform: uppercase;
+h2,
+h3,
+h4 {
+  text-transform: uppercase;
 }
 
 img {
-    width: 100%;
+  width: 100%;
+}
+
+// Header
+#header {
+  &-home {
+    background: $bg-image no-repeat center right / cover;
+    height: 100vh;
+    color: #fff;
+  }
+
+  &-inner {
+    
+  }
 }
