--- a/scss/main.css
+++ b/scss/main.css
@@ -1,3 +1,9 @@
+.container {
+  max-width: 1280px;
+  padding: 0 1.5rem;
+  margin: auto;
+  overflow: hidden; }
+
 * {
   margin: 0;
   padding: 0;
@@ -21,11 +27,16 @@ h4 {
   text-transform: uppercase; }
 
 img {
-  width: 100%; }
+  width: 100%;
+ }
+
+#logo {
+  width: 70px;
+  height: 70px;
+  color: #fff;
+  text-transform: uppercase; }
 
 #header-home {
   background: url("../img/showcase.jpg") no-repeat center right/cover;
   height: 100vh;
   color: #fff; }
-
-/*# sourceMappingURL=main.css.map */
