--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import "config";
+@import 'utilities';
 
 // General Styles
 * {
@@ -32,6 +33,37 @@ img {
   width: 100%;
 }
 
+// Logo
+
+#logo {
+  width: 70px;
+  height: 70px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+// Main Nav
+#main-nav {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1rem;
+
+  ul {
+    display: flex;
+  }
+
+  li {
+    padding: 1rem 1.5rem;
+  }
+
+  a {
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    border-bottom: 3px transparent solid;
+  }
+}
+
 // Header
 #header {
   &-home {
@@ -41,6 +73,5 @@ img {
   }
 
   &-inner {
-    
   }
 }
